--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -23,6 +23,12 @@ body {
   }
 }
 
+@media (width <= 1024px) {
+  .space-top {
+    margin-top: 9rem;
+  }
+}
+
 .leading-none {
   line-height: 1;
 }
@@ -222,6 +228,25 @@ nav .submenu .current_page_item {
 .hero-curve{
   clip-path: ellipse(85% 100% at 50% 0%);
 }
+
+@media (width <= 1024px) {
+  .hero-curve {
+    clip-path: ellipse(120% 100% at 50% 0%);
+  }
+}
+
+@media (width <= 768px) {
+  .hero-curve {
+    clip-path: ellipse(150% 100% at 50% 0%);
+  }
+}
+
+@media (width <= 575px) {
+  .hero-curve {
+    clip-path: ellipse(180% 100% at 50% 0%);
+  }
+}
+
 
 .boxshadow {
   box-shadow: 0 4px 0 0 rgb(0 0 0 / 25%);
@@ -633,6 +658,11 @@ nav .submenu .current_page_item {
   .highlighted-second {
     border-radius: 0 10px 10px;
   }
+
+}
+
+.featured-donuts .splide__pagination {
+  display: none;
 }
 
 @media (width <= 1084px) {
@@ -652,10 +682,32 @@ nav .submenu .current_page_item {
     top: 45%;
   }
 
+  .featured-donuts .splide__arrows {
+    display: none;
+  }
+
   .related-post-img {
     height: 157px;
     max-height: 157px;
     min-height: 157px;
+  }
+
+  .featured-donuts .splide__pagination {
+    display: flex;
+    gap: 0.2rem;
+  }
+
+  .splide__pagination__page.is-active {
+    border: 1px solid #000;
+  }
+
+  .splide__pagination__page {
+    background: black;
+    transform: scale(1.4);
+    z-index: 1;
+    border: 1px solid #ffed56;
+    height: 10px;
+    width: 10px;
   }
 }
 
